Fix grab-mode: max z-index for dragging

--- a/source/index.scss
+++ b/source/index.scss
@@ -12,6 +12,7 @@ $border: rgba(0, 0, 0, 1);
     opacity: 0.9;
     border: 1px solid $border;
     &.grab-mode {
+      z-index: 16777271 !important;
       cursor: -webkit-grab;
       cursor: grab;
     }
